fixed link styling on About page for resume download. changed overflow: scroll s to auto

--- a/client/stylesheets/forContentPages/pageClasses.css
+++ b/client/stylesheets/forContentPages/pageClasses.css
@@ -163,3 +163,7 @@ span.break{
   display: block;
 }
 
+a.noLink{
+  color: white;
+  text-decoration: none;
+}
