--- a/client/stylesheets/forMenus/topMenu.css
+++ b/client/stylesheets/forMenus/topMenu.css
@@ -9,7 +9,7 @@
 	display: inline-block;
 	transition: all 1.5s;
 	width: 90%;
-	overflow: scroll;
+	overflow: auto;
 }
 
 #topMenu.open{
